# sentinel-proto

./: .gitignore  README.md  process_analyzer.py  pyproject.toml
config/: sentinel_config.toml
contracts/: README.md  memory_snapshot.example.json  memory_snapshot.schema.json
python/: config_loader.py  gui_tk.py  main.py  requirements.txt
rust/: Cargo.toml  README.md
rust/src/: lib.rs
tauri-shell/: Cargo.toml  README.md  tauri.conf.json
tauri-shell/src/: main.rs
tests/: test_config_loader.py  test_main.py
