[package]
name = "tauri-shell"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "fs-all", "dialog-open"] }
sentinel-core = { path = "../rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
